[project]
name = "volatilityforecast"
version = "0.1.0"
description = "Application of neural networks with attention mechanism for forecasting economic instability."
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.1",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.10.0",
    "yfinance>=1.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
